cicd/openshift/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: order-entry-system
  name: order-entry-system
  namespace: order-system-dev
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: order-entry-system
  sessionAffinity: None
  type: ClusterIP
